--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.2.0",
+    "mavon-editor": "^3.0.0-beta",
     "moment": "^2.29.4",
     "vue": "^3.2.37",
     "vue-moment": "^4.1.0"
