--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.5",
+    "@vueform/multiselect": "^2.5.2",
     "bootstrap": "^5.2.0",
     "mavon-editor": "^3.0.0-beta",
     "moment": "^2.29.4",
