--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,9 @@ jobs:
           username: ${{ secrets.DEPLOY_SERVER_USERNAME }}
           password: ${{ secrets.DEPLOY_SERVER_PASSWORD }}
           script: |
+            git clone https://github.com/${{ github.repository }}	
+            cd ${{ github.event.repository.name }}	
+            git pull https://github.com/${{ github.repository }}	
             bash ./run.sh
             
             
