--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,6 @@ jobs:
           script: |
             git clone https://github.com/${{ github.repository }}	
             cd ${{ github.event.repository.name }}
-            git reset --hard HEAD
-            git pull
+            git fetch origin main
+            git reset --hard origin/main
             bash -x ./run.sh
