--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,2 @@
-VITE_BASE_API_URL=http://45.143.92.21:8000/api
+VITE_BASE_URL=https://45.143.92.21:8000
+VITE_BASE_API_URL=https://45.143.92.21:8000/api
