--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,24 @@
+# See https://pre-commit.com for more information
+# See https://pre-commit.com/hooks.html for more hooks
 repos:
-  - repo: https://gitlab.com/pycqa/flake8
-    rev: '4.0.1'
+-   repo: https://github.com/pre-commit/pre-commit-hooks
+    rev: v3.2.0
+    hooks:
+    -   id: check-yaml
+    -   id: check-added-large-files
+
+-   repo: https://github.com/pycqa/flake8
+    rev: 5.0.4
     hooks:
     -   id: flake8
         additional_dependencies: [
             flake8-black==0.3.3,
-            flake8-bugbear==22.4.25,
+            flake8-bugbear==22.8.23,
             flake8-commas==2.1.0,
+            flake8-django==1.1.5,
             flake8-import-order==0.18.1,
             flake8-quotes==3.3.1,
         ]
+        language: python
+        types: [python]
         args: [--config, setup.cfg]
