--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ docstring-quotes = """
 max-complexity = 8
 ignore = BLK100, B008, E128, I101, I100, I201, F811, W503, C819, C901, H301
 exclude =
-    migrations
+    venv
+    */migrations/*
     settings.py
     manage.py
