--- a/backend/requirements.prod.txt
+++ b/backend/requirements.prod.txt
@@ -1,4 +1,8 @@
 -r requirements.txt
 
-uvicorn==0.18.3
+click==8.1.3
+gunicorn==20.1.0
+h11==0.13.0
+pysqlite3==0.4.7
+pysqlite3-binary==0.4.6
 uvicorn==0.18.3
